frame/support/test/tests/derive_no_bound_ui/eq.stderr
error[E0277]: can't compare `Foo<T>` with `Foo<T>`
   --> $DIR/eq.rs:6:8
    |
6   | struct Foo<T: Config> {
    |        ^^^ no implementation for `Foo<T> == Foo<T>`
    |
    = help: the trait `PartialEq` is not implemented for `Foo<T>`
